--- a/source/.obsidian/appearance.json
+++ b/source/.obsidian/appearance.json
@@ -1,1 +1,5 @@
-{}
+{
+  "interfaceFontFamily": "SuperPingFangV1",
+  "monospaceFontFamily": "SuperSFMonoV1",
+  "textFontFamily": "SuperPingFangV1"
+}
