--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -42,7 +42,7 @@ comments:
   # giscus
   # https://giscus.app/zh-CN
   giscus:
-    data-repo: f-engg/obsp
+    data-repo: devkamiki/obsp
     data-repo-id: R_kgDOOJXv_g
     data-category: Announcements
     data-category-id: DIC_kwDOOJXv_s4CoGLJ
