--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/stellar"]
 	path = themes/stellar
-	url = https://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@github.com/devkamiki/hexo-theme-stellar.git
+	url = https://github.com/devkamiki/hexo-theme-stellar.git
