--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Observer's Space Mirror
+title: Observer's Space
 favicon: /images/ringed-planet.svg
 avatar: /images/ringed-planet.svg
 subtitle: '宇宙中的观星者'
