--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -5,8 +5,8 @@ menubar:
        theme: '#1BCDFC' # 高亮时的颜色，仅 svg 中 fill="currentColor" 时有效
        icon: <svg xmlns="http://www.w3.org/2000/svg" height="1em" fill="currentColor" viewBox="0 0 512 512"><path d="M 256 48 Q 313 48 360 76 L 360 76 L 360 76 Q 407 103 436 152 Q 464 201 464 256 Q 464 311 436 360 Q 407 409 360 436 Q 313 464 256 464 Q 199 464 152 436 Q 105 409 76 360 Q 48 311 48 256 Q 48 201 76 152 Q 105 103 152 76 Q 199 48 256 48 L 256 48 Z M 256 512 Q 326 511 384 478 L 384 478 L 384 478 Q 442 444 478 384 Q 512 323 512 256 Q 512 189 478 128 Q 442 68 384 34 Q 326 1 256 0 Q 186 1 128 34 Q 70 68 34 128 Q 0 189 0 256 Q 0 323 34 384 Q 70 444 128 478 Q 186 511 256 512 L 256 512 Z M 216 336 Q 194 338 192 360 Q 194 382 216 384 L 296 384 L 296 384 Q 318 382 320 360 Q 318 338 296 336 L 288 336 L 288 336 L 288 248 L 288 248 Q 286 226 264 224 L 216 224 L 216 224 Q 194 226 192 248 Q 194 270 216 272 L 240 272 L 240 272 L 240 336 L 240 336 L 216 336 L 216 336 Z M 256 192 Q 270 192 279 183 L 279 183 L 279 183 Q 288 174 288 160 Q 288 146 279 137 Q 270 128 256 128 Q 242 128 233 137 Q 224 146 224 160 Q 224 174 233 183 Q 242 192 256 192 L 256 192 Z" /></svg>
        #   icon: solar:documents-bold-duotone # 支持 svg/img 标签，可以定义在 icons.yml 文件中，也支持外部图片的 URL
-       title: 关于 # 标题
-       url: /about # 跳转链接，支持相对路径和绝对路径
+       title: Welcome # 标题
+       url: /welcome # 跳转链接，支持相对路径和绝对路径
      - id: friends
        theme: '#1BCDFC'
        icon: <svg xmlns="http://www.w3.org/2000/svg" height="1em" fill="currentColor" viewBox="0 0 512 512"><path d="M 179.2 89.6 Q 215.2 90.4 234.4 121.6 Q 252 153.6 234.4 185.6 Q 215.2 216.8 179.2 217.6 Q 143.2 216.8 124 185.6 Q 106.4 153.6 124 121.6 Q 143.2 90.4 179.2 89.6 L 179.2 89.6 Z M 179.2 256 Q 207.2 256 230.4 242.4 L 230.4 242.4 L 230.4 242.4 Q 253.6 228.8 268 204.8 Q 281.6 180.8 281.6 153.6 Q 281.6 126.4 268 102.4 Q 253.6 78.4 230.4 64.8 Q 207.2 51.2 179.2 51.2 Q 151.2 51.2 128 64.8 Q 104.8 78.4 90.4 102.4 Q 76.8 126.4 76.8 153.6 Q 76.8 180.8 90.4 204.8 Q 104.8 228.8 128 242.4 Q 151.2 256 179.2 256 L 179.2 256 Z M 142.4 332.8 L 216 332.8 L 142.4 332.8 L 216 332.8 Q 256 333.6 284.8 358.4 Q 312.8 383.2 319.2 422.4 L 39.2 422.4 L 39.2 422.4 Q 45.6 383.2 73.6 358.4 Q 102.4 333.6 142.4 332.8 L 142.4 332.8 Z M 142.4 294.4 Q 82.4 296 41.6 336 L 41.6 336 L 41.6 336 Q 1.6 376.8 0 436.8 Q 0 447.2 7.2 453.6 Q 13.6 460.8 24 460.8 L 334.4 460.8 L 334.4 460.8 Q 344.8 460.8 351.2 453.6 Q 358.4 447.2 358.4 436.8 Q 356.8 376.8 316.8 336 Q 276 296 216 294.4 L 142.4 294.4 L 142.4 294.4 Z M 487.2 460.8 Q 497.6 460.8 504.8 453.6 L 504.8 453.6 L 504.8 453.6 Q 512 446.4 512 436 Q 510.4 381.6 474.4 344.8 Q 437.6 308.8 383.2 307.2 L 333.6 307.2 L 333.6 307.2 Q 328.8 307.2 323.2 308 Q 351.2 331.2 367.2 364 Q 384 397.6 384 436.8 Q 384 450.4 377.6 460.8 L 487.2 460.8 L 487.2 460.8 Z M 345.6 256 Q 384 255.2 408.8 229.6 L 408.8 229.6 L 408.8 229.6 Q 434.4 204.8 435.2 166.4 Q 434.4 128 408.8 103.2 Q 384 77.6 345.6 76.8 Q 315.2 77.6 292.8 94.4 Q 307.2 120.8 307.2 153.6 Q 306.4 196.8 282.4 229.6 Q 307.2 255.2 345.6 256 L 345.6 256 Z"/></svg>
@@ -35,11 +35,12 @@ inject:
   head:
     - <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-screen-web/style.css" />
     - <link rel="preconnect" href="https://fonts.bunny.net">
+    - <link href="https://fonts.bunny.net/css?family=bree-serif:400" rel="stylesheet" />
     - <link href="https://fonts.bunny.net/css?family=pt-mono:400" rel="stylesheet" />
 style:
   font-family:
-    logo: 'LXGW WenKai Screen'
-    body: 'LXGW WenKai Screen'
+    logo: 'Bree Serif', 'LXGW WenKai Screen'
+    body: 'Bree Serif', 'LXGW WenKai Screen'
     code: 'PT Mono'
     codeblock: 'PT Mono'
 comments:
