--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -41,9 +41,19 @@ inject:
     - <link rel="stylesheet" href="https://fontsapi.zeoseven.com/2/main/result.css" onerror="this.href='https://fontsapi-storage.zeoseven.com/2/main/result.css'" />
   script:
     - |
-      <div style="position:fixed; bottom:0; right:0; width:300px; height:200px; z-index: 9999;">
-              <iframe src="https://support.nodeseek.com/page/promotion?id={your_id}" width="100%" height="100%" frameborder="0"></iframe>
-              </div>
+      <div id="float-iframe" style="position: fixed; right: -320px; bottom: 20px; width: 300px; height: 200px; transition: right 0.5s ease;">
+        <iframe 
+          src="https://support.nodeseek.com/page/promotion?id={your_id}" 
+          style="border-radius:8px; height: 246px;"
+        ></iframe>
+      </div>
+      <script>
+        window.addEventListener('scroll', () => {
+          const iframe = document.getElementById('float-iframe');
+          const isAtBottom = (window.innerHeight + window.scrollY) >= document.body.offsetHeight;
+          iframe.style.right = isAtBottom ? '20px' : '-320px';
+        });
+      </script>
 style:
   font-family:
     logo: "'Bree Serif', 'LXGW Zhenkai'"
