--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -41,7 +41,16 @@ inject:
     - <link rel="stylesheet" href="https://fontsapi.zeoseven.com/2/main/result.css" onerror="this.href='https://fontsapi-storage.zeoseven.com/2/main/result.css'" />
   script:
     - |
-      <div id="float-iframe" style="position: fixed; right: -320px; bottom: 20px; width: 300px; height: 200px; transition: right 0.5s ease;">
+      <style>
+        @media (max-width: 768px) {
+          #float-iframe {
+            width: 200px !important;
+            height: 150px !important;
+          }
+        }
+      </style>
+      <div id="float-iframe" style="position: fixed; right: -320px; bottom: 0px; width: auto; height: auto; transition: right 0.5s ease; background: white; border-radius: 8px; box-shadow: 0 0 15px rgba(0,0,0,0.2); overflow: hidden;">
+        <button onclick="this.parentNode.style.right='-320px'" style="position: absolute; top: 5px; right: 5px; background: #ff4444; color: white; border: none; width: 20px; height: 20px; border-radius: 50%; cursor: pointer;">×</button>
         <iframe 
           src="https://support.nodeseek.com/page/promotion?id={your_id}" 
           style="border-radius:8px; height: 246px;"
@@ -50,7 +59,7 @@ inject:
       <script>
         window.addEventListener('scroll', () => {
           const iframe = document.getElementById('float-iframe');
-          const isAtBottom = (window.innerHeight + window.scrollY) >= document.body.offsetHeight;
+          const isAtBottom = (window.innerHeight + window.scrollY) >= document.body.offsetHeight - 50; // 提前 50px 触发
           iframe.style.right = isAtBottom ? '20px' : '-320px';
         });
       </script>
