--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -44,7 +44,7 @@ inject:
       <div id="float-iframe" style="position: fixed; right: -320px; bottom: 0px; width: auto; height: auto; transition: right 0.5s ease; background: white; border-radius: 8px; box-shadow: 0 0 15px rgba(0,0,0,0.2); overflow: hidden;">
         <button onclick="this.parentNode.style.right='-320px'" style="position: absolute; top: 5px; right: 5px; background: #ff4444; color: white; border: none; width: 20px; height: 20px; border-radius: 50%; cursor: pointer;">×</button>
         <iframe 
-          src="https://support.nodeseek.com/page/promotion?id={your_id}" 
+          src="https://support.nodeseek.com/page/promotion?id=31" 
           style="border-radius:8px; height: 246px;"
         ></iframe>
       </div>
