--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/stellar"]
 	path = themes/stellar
-	url = git@github.com:devkamiki/hexo-theme-stellar.git
+	url = https://github.com/devkamiki/hexo-theme-stellar.git
