--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Observer's Space
 favicon: /images/ringed-planet.svg
 avatar: /images/ringed-planet.svg
-subtitle: '宇宙中的观星者 - Stargazer in the Universe'
+subtitle: '宇宙中的观星者<br>Stargazer in the Universe'
 description: '开源项目介绍及教程 - Open Source Projects Intro and Tutorial'
 keywords:
 author: Yuki Kamiki
